--- a/Eff_train.ipynb
+++ b/Eff_train.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CN Images training script\n",
+    "## CNN Images training script\n",
     "Note: This script merely outlines the procedures for training pytorch model. It does not replicate any study and does not attemp to achieve state-of-the-art in CIFAR-100 classification."
    ]
   },
